--- a/docs/views/default/第二篇文章.md
+++ b/docs/views/default/第二篇文章.md
@@ -1,5 +1,5 @@
 ---
-title: 测试IFRAME
+title: 测试IFRAME-FIX
 date: 2022-05-06
 sidebar: "auto"
 categories:
@@ -17,5 +17,5 @@ tags:
 
 ### 三级
 
-<iframe src="https://kuro7766.github.io/BlogProject/build/web/index.html"/ height="1000">
+<iframe src="https://kuro7766.github.io/BlogProject/build/web/index.html"  height="1000">
 
