--- a/docs/views/default/第二篇文章.md
+++ b/docs/views/default/第二篇文章.md
@@ -19,3 +19,8 @@ tags:
 
 <iframe src="https://kuro7766.github.io/BlogProject/build/web/index.html" style="width: 100%;"  height="500">
 
+
+## 测试Latex
+
+$$\delta a < 10, \forall b \exists c <0$$
+
