--- a/docs/views/default/第二篇文章.md
+++ b/docs/views/default/第二篇文章.md
@@ -9,15 +9,14 @@ tags:
 - kaggle
 ---
 
+
+
+latex在前面
+
+
+
 <!-- more -->
 
-侧视测试
-
-## 似乎必须从二级标题开始
-
-### 三级
-
-<iframe src="https://kuro7766.github.io/BlogProject/build/web/index.html" style="width: 100%;"  height="500">
 
 
 ## 测试Latex
@@ -29,3 +28,13 @@ $$\delta a < 10, \forall b \exists c <0$$
 ## abc
 
 sldkafjklsjdlk
+
+
+
+## 似乎必须从二级标题开始
+
+### 三级
+
+<iframe src="https://kuro7766.github.io/BlogProject/build/web/index.html" style="width: 100%;"  height="500">
+
+
