--- a/docs/views/default/第二篇文章.md
+++ b/docs/views/default/第二篇文章.md
@@ -33,8 +33,8 @@ sldkafjklsjdlk
 
 ## 似乎必须从二级标题开始
 
-### 三级
+### 套娃
 
-<iframe src="https://kuro7766.github.io/BlogProject/build/web/index.html" style="width: 100%;"  height="500">
+<iframe src="https://kuroweb.tk/MyBlog-V3/views/default/%E7%AC%AC%E4%BA%8C%E7%AF%87%E6%96%87%E7%AB%A0.html#%E6%B5%8B%E8%AF%95latex" style="width: 100%;"  height="500">
 
 
